--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,12 +1,20 @@
-/*
-  Специально для тёмной темы при наличии класса,
-  здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
 :root.theme-dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  /*Цвета*/
+  --primary-color: #000028;
+  --secondary-color: #f1b2ce;
+  --accent-color-rgb: 255 0 112;
+  --accent-color: #ff0070;
+  --brand-color: #db00ff;
+
+  /*Текст*/
+  --menu-color: var(--accent-color);
+  --menu-hover-outline-color: rgb(var(--accent-color-rgb) / 0.4);
+  --decor-color: var(--accent-color);
+
+  /*Фон*/
+  --bg-image: url(../images/cover-image-dark.png);
+}
+
+.theme-dark .header__decor-text {
+  display: flex;
 }
