--- a/styles/light.css
+++ b/styles/light.css
@@ -1,12 +1,43 @@
-/*
-  Специально для светлой темы при наличии класса.
-  Здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
+@media (prefers-color-scheme: light) {
+  :root {
+    /*Цвета*/
+    --primary-color: #fff1f7;
+    --secondary-color: #353430;
+    --secondary-color-rgb: 53 52 48;
+    --accent-color: #ff8dcb;
+    --brand-color: #ffc2e6;
+
+    /*Текст*/
+    --menu-color: var(--secondary-color);
+    --menu-hover-outline-color: rgb(var(--secondary-color-rgb) / 0.4);
+    --decor-color: var(--secondary-color);
+
+    /*Фон*/
+    --bg-image: url(../images/cover-image-light.png);
+  }
+
+  .header__decor-text {
+    display: none;
+  }
+}
 
 :root.theme-light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  /*Цвета*/
+  --primary-color: #fff1f7;
+  --secondary-color: #353430;
+  --secondary-color-rgb: 53 52 48;
+  --accent-color: #ff8dcb;
+  --brand-color: #ffc2e6;
+
+  /*Текст*/
+  --menu-color: var(--secondary-color);
+  --menu-hover-outline-color: rgb(var(--secondary-color-rgb) / 0.4);
+  --decor-color: var(--secondary-color);
+
+  /*Фон*/
+  --bg-image: url(../images/cover-image-light.png);
+}
+
+.theme-light .header__decor-text {
+  display: none;
 }
