--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 .page {
-  padding: var(--base-spacing);
+  padding: 0 var(--base-spacing);
   color: var(--secondary-color, #f1b2ce);
   font-family: var(--font-base), sans-serif;
   font-size: var(--font-size-base, 18px);
@@ -34,14 +34,14 @@
 }
 
 .decorated-zone::before {
-  top: 0;
+  top: var(--base-spacing);
   right: 0;
   border-inline-start: none;
   border-block-end: none;
 }
 
 .decorated-zone::after {
-  bottom: 0;
+  bottom: var(--base-spacing);
   left: 0;
   border-inline-end: none;
   border-block-start: none;
@@ -51,8 +51,9 @@
   display: grid;
   grid-template-rows: 1fr min-content 1fr;
   align-items: center;
-  block-size: calc(100dvb - 2 * var(--base-spacing));
-  min-block-size: calc(var(--min-block-size) - 2 * var(--base-spacing));
+  padding: var(--base-spacing) 0;
+  block-size: 100vb;
+  min-block-size: var(--min-block-size);
 }
 
 .brand-title {
@@ -63,7 +64,7 @@
 
 .header__decor-text {
   position: absolute;
-  top: 0;
+  top: var(--base-spacing);
   right: 0;
   display: flex;
   place-items: center;
@@ -124,8 +125,7 @@
 }
 
 .content {
-  margin-block-start: var(--sections-gap);
-  margin-block-end: var(--sections-gap);
+  margin: calc(var(--sections-gap) - var(--base-spacing)) 0;
 }
 
 .section {
@@ -186,8 +186,9 @@
   display: grid;
   justify-items: center;
   align-items: center;
-  min-block-size: calc(var(--min-block-size) - 2 * var(--base-spacing));
-  block-size: calc(100dvb - 2 * var(--base-spacing));
+  padding: var(--base-spacing) 0;
+  min-block-size: var(--min-block-size);
+  block-size: 100vb;
 }
 
 .footer__title {
