--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,10 @@
 .page {
-  color: var(--secondary-color, #f1b2ce);
-  font-family: var(--font-base), sans-serif;
+  color: var(--color-card-text, #f1b2ce);
+  font-family: var(--font-base), monospace;
   font-size: var(--font-size-base, 18px);
   line-height: var(--line-height-base, 1.3);
-  background-color: var(--bg-color, #000028);
-  background-image: var(--bg-image);
+  background-color: var(--color-background, #000028);
+  background-image: var(--image-background);
   background-repeat: no-repeat;
   background-position: center;
   background-size: 100% 100%;
@@ -12,11 +12,11 @@
 }
 
 .title-decor {
-  color: var(--primary-color);
+  color: var(--color-decor-title);
   font-weight: var(--font-weight-bold);
   font-size: inherit;
   line-height: inherit;
-  background-color: var(--accent-color);
+  background-color: var(--color-decor-title-background);
 }
 
 .decorated-zone {
@@ -27,7 +27,7 @@
 .decorated-zone::after {
   content: '';
   position: absolute;
-  border: 1px solid var(--decor-color);
+  border: 1px solid var(--color-decor);
   inline-size: 25px;
   block-size: 25px;
 }
@@ -56,9 +56,13 @@
 }
 
 .brand-title {
-  color: var(--brand-title-color);
+  color: var(--color-brand-title);
   font-size: var(--font-size-brand-title);
   line-height: 0.83;
+}
+
+.header__title {
+  text-shadow: 4px 4px var(--color-shadow);
 }
 
 .header__decor-text {
@@ -67,7 +71,7 @@
   right: var(--base-spacing);
   display: flex;
   place-items: center;
-  color: var(--accent-color);
+  color: var(--color-decor);
   line-height: 1.4;
   text-transform: uppercase;
 }
@@ -79,8 +83,8 @@
   height: 9px;
   margin: 0 10px;
   border-radius: 50%;
-  box-shadow: 0 0 4px 2px var(--accent-color);
-  background-color: var(--accent-color);
+  box-shadow: 0 0 4px 2px var(--color-decor);
+  background-color: var(--color-decor);
 }
 
 .header__theme-menu {
@@ -96,7 +100,7 @@
 .header__theme-menu-button {
   border: none;
   padding: 2px 13px;
-  color: var(--menu-color);
+  color: var(--color-menu);
   line-height: 1;
   text-transform: lowercase;
   background-color: transparent;
@@ -106,21 +110,17 @@
 }
 
 .header__theme-menu-button:hover {
-  outline: 1px solid var(--menu-hover-outline-color);
+  outline: 1px solid var(--color-menu-outline-hover);
 }
 
 .header__theme-menu-button:focus-visible {
-  border-block-end: 1px solid var(--menu-color);
+  border-block-end: 1px solid var(--color-menu);
   outline: none;
 }
 
 .header__theme-menu-button_active {
-  outline: 1px solid var(--menu-color);
+  outline: 1px solid var(--color-menu);
   pointer-events: none;
-}
-
-.header__title {
-  text-shadow: 4px 4px var(--accent-color);
 }
 
 .content {
@@ -138,7 +138,7 @@
 }
 
 .section__title {
-  color: var(--section-title-color);
+  color: var(--color-section-title);
   font-size: inherit;
   line-height: inherit;
 }
@@ -156,17 +156,21 @@
   font-weight: initial;
 }
 
+.card__text:not(:last-of-type) {
+  margin-bottom: 10px;
+}
+
 .card__link {
   text-decoration: none;
-  text-shadow: 2px 1px var(--accent-color);
+  text-shadow: 2px 1px var(--color-shadow);
 }
 
 .card__link:hover {
-  border-block-end: 1px solid var(--secondary-color);
+  border-block-end: 1px solid var(--color-card-text);
 }
 
 .card__link:focus-visible {
-  outline: 1px solid var(--secondary-color);
+  outline: 1px solid var(--color-card-text);
   outline-offset: 2px;
 }
 
@@ -192,7 +196,7 @@
 }
 
 .footer__title {
-  text-shadow: 2px 2px var(--accent-color);
+  text-shadow: 2px 2px var(--color-shadow);
 }
 
 @media (width >= 768px) {
@@ -234,11 +238,13 @@
     grid-column: 1 / -1;
   }
 
-  .gallery__image_size_2x1 {
+  .gallery__image:first-of-type,
+  .gallery__image:last-of-type {
     grid-column: span 2;
   }
 
-  .gallery__image_size_1x2 {
+  .gallery__image:nth-of-type(2),
+  .gallery__image:nth-of-type(3) {
     grid-row: span 2;
   }
 }
