--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,27 +2,24 @@
   /*Типографика*/
   --font-base: 'IBM Plex mono';
   --font-size-base: 18px;
-  --line-height-base: 1.3;
-  --font-weight-bold: 700;
   --font-size-brand-title: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  --font-weight-bold: 700;
+  --line-height-base: 1.3;
 
   /*Цвета*/
-  --primary-color: #000028;
-  --secondary-color: #f1b2ce;
-  --accent-color: #ff0070;
-  --accent-color-rgb: 255 0 112;
-  --brand-color: #db00ff;
+  --color-background: #000028;
+  --color-brand-title: #db00ff;
+  --color-card-text: #f1b2ce;
+  --color-decor: #ff0070;
+  --color-decor-title: #000028;
+  --color-decor-title-background: #ff0070;
+  --color-menu: #ff0070;
+  --color-menu-outline-hover: rgb(255 0 112 / 0.4);
+  --color-section-title: #ff0070;
+  --color-shadow: #ff0070;
 
   /*Фон*/
-  --bg-image: url(../images/cover-image-dark.png);
-  --bg-color: var(--primary-color);
-
-  /*Цвета (семантика)*/
-  --brand-title-color: var(--brand-color);
-  --section-title-color: var(--accent-color);
-  --decor-color: var(--accent-color);
-  --menu-color: var(--accent-color);
-  --menu-hover-outline-color: rgb(var(--accent-color-rgb) / 0.4);
+  --image-background: url(../images/cover-image-dark.png);
 
   /*Отступы и блоки*/
   --base-spacing: 10px;
